Fix cutoff border and fix spacing for neighboring padded cards so that extra large spaces don't appear around text blocks.

--- a/kronofoto/static/assets/scss/components/exhibit/container.scss
+++ b/kronofoto/static/assets/scss/components/exhibit/container.scss
@@ -24,6 +24,10 @@ $container-max-width: 1280px;
     border-bottom: none;
     padding: 0px;
   }
+  &:not(&--no-padding) + &:not(&--no-padding) {
+    border-top: 0px;
+  }
+
   //overflow: hidden;
   //@media screen and (min-width: 48em) {
     overflow: initial;
